brightening the border and fixing the overflow

--- a/public/CSS_Files/main.css
+++ b/public/CSS_Files/main.css
@@ -4,6 +4,10 @@ main {
     font-weight: 800;
 }
 
+hr{
+    border: 0.5px solid rgba(119, 85, 23, 0.596);
+}
+
 h1 {
     margin: 10px;
 }
@@ -113,7 +117,6 @@ a {
     .card-information {
         aspect-ratio: 8/10;
         width: 66%;
-        height: 33%;
     }
 
 }
